; ModuleID = '/home/carl/AnghaBench/freebsd/sys/fs/nfsserver/extr_nfs_nfsdcache.c_nfsrc_wanted.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/fs/nfsserver/extr_nfs_nfsdcache.c_nfsrc_wanted.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nfsrvcache = type { i32 }

@RC_WANTED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.nfsrvcache*)* @nfsrc_wanted to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @nfsrc_wanted(%struct.nfsrvcache* %0) #0 {
  %2 = alloca %struct.nfsrvcache*, align 8
  store %struct.nfsrvcache* %0, %struct.nfsrvcache** %2, align 8
  %3 = load %struct.nfsrvcache*, %struct.nfsrvcache** %2, align 8
  %4 = getelementptr inbounds %struct.nfsrvcache, %struct.nfsrvcache* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 4
  %6 = load i32, i32* @RC_WANTED, align 4
  %7 = and i32 %5, %6
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %9, label %19

9:                                                ; preds = %1
  %10 = load i32, i32* @RC_WANTED, align 4
  %11 = xor i32 %10, -1
  %12 = load %struct.nfsrvcache*, %struct.nfsrvcache** %2, align 8
  %13 = getelementptr inbounds %struct.nfsrvcache, %struct.nfsrvcache* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = and i32 %14, %11
  store i32 %15, i32* %13, align 4
  %16 = load %struct.nfsrvcache*, %struct.nfsrvcache** %2, align 8
  %17 = ptrtoint %struct.nfsrvcache* %16 to i32
  %18 = call i32 @wakeup(i32 %17)
  br label %19

19:                                               ; preds = %9, %1
  ret void
}

declare dso_local i32 @wakeup(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
